namespace SpotifyClone;

public enum ClientState
{
    MainUserSelectState,
    GeneralState,
    FriendState,
    Stopped,
    PlaylistState
}