@startuml
left to right direction

namespace MediaPlayer {

    enum ClientState {
        MainUserSelectState
        GeneralState
        FriendState
        PlaylistState
        StoppedState
    }
    
    class QueueExtensions <<static>> {
            {static} + DequeueRandom<TQueueable>(this queue: Queue<TQueueable>) : TQueueable
        }
    
    record CommandEntry {
        + Key: char
        + Description: string
    }
    
    class MusicPlayer {
        - _player: WaveOutEvent
        - _audioReader: AudioFileReader
        - _currentSong: Song
        - _songQueue: Queue<Song>
        - _shuffle: bool
        + CurrentSong: _currentSong
        + Shuffle: _shuffle
        + SongQueue: ImmutableList<_songQueue>
        
        + PlaySong(song: Song): void
        + AppendQueue(songs: IEnumerable<Song>): void
        + ClearQueue(): void
        + StopPlaying(): void
        + SkipSong(): void
        + TogglePause(): void
        + ToggleShuffle(): void
    }
        
    class Client {
        - _mainUser: User
        - _player: MusicPlayer
        - _state: ClientState
        
        + Start()
        
        ' commands
        - PlaySong(): void
        - PlayPlaylist(): void
        - ViewCurrentSong(): void
        - TogglePause(): void
        - ToggleShuffle(): void
        - ClearQueue(): void
        - ViewQueue(): void
        - SkipSong(): void
        - StopPlayer(): void
        - AddFriend(): void
        - ViewFriends(): void
        - AddFriendPlaylists() void
        - RemoveFriend(): void
        - CreatePlaylist(): void
        - EditPlaylist(): void
        - RemovePlaylist(): void
        
        ' state
        - MainUserSelect(): void
        - GeneralSelect(): void
        - FriendSelect(): void
        - PlaylistSelect(): void
        
        ' menus
        - SongSelectMenu(): Song
        - UserSelectMenu(): User
        - ArtistSelectMenu(): Artist
        - AlbumSelectMenu(): Album
        - PlaylistSelectMenu(user: User): Playlist
        
        ' helpers
        - FlushTerminal(): void
        - Input(entries: CommandEntry[1..*]): char
        - Input(items: List<T>): int
        - ClearLine(): void
    }
    
    namespace Entities {
    
        class Song {
            - _name: string
            - _artists: List<Artist>
            - _duration: double
            - _releaseDate: DateOnly
            - _path: string
            + Name: _name
            + Artists: _artist
            + Duration: _duration
            + ReleaseDate: _releaseDate
            + Path: _path
            
            + GetAllSongs(): List<Song> {static}
        }
            
        class User {
            - _name: string
            - _friends: List<User>
            - _playlists: List<Playlist>
            + Name: _name
            + Friends: _friends
            + Playlists: _playlists
            
            + GetAllUsers(): List<User> {static}
        }
        
        class Playlist {
            - _name: string
            - _songs: List<Song>
            + Name: _name
            + Songs: _songs
            
            + Add(song: Song)
            + Remove(index: int)
            + Rename(newName: string)
        }
        
        class Album {
            - _name: string
            - _artists: List<Artist>
            - _songs: List<Song>
            + Name: _name
            + Artists: _artists
            + Songs: _songs
            
            + GetAllAlbums(): List<Album> {static}
        }
        
        class Artist {
            - _name: string
            - _albums: List<Album>
            - _songs: List<Song>
            + Albums: _albums
            + Songs: _songs
            + Name: _name
            
            + GetAllArtists(): List<Artists> {static}
        }
    }
    
}

Client --> MusicPlayer : _player
Client --> User : _mainUser
Client --> Song : _currentSong
Client --> "0..*" Song : _queue
Client --> ClientState : _state
Client --> CommandEntry

MusicPlayer --> Song : _currentSong

User o-- "0..*" Playlist : _playlists
User --> "0..*" User : _friends

Album --> "1..*" Song : _songs
Album -- "1..*" Artist : _artists

Playlist --> "0..*" Song : _songs

Song -- "1..*" Artist : _artists

@enduml